# ced-old

./: .gitignore  CMakeLists.txt
include/: config.h  fileutils.h  flags.h  mymaths.h  mytypes.h
include/core/: doccmd.h  document.h  input.h  line.h  strbuf.h
include/document/: document.h  line.h
include/ds/: strbuf.h
include/font/: font.h
include/gui/: font.h  window.h
include/gui/gl/: shader.h
include/input/: input.h  keyboard.h
include/rendering/: renderer.h
libs/include/glad/: glad.h
res/shaders/: frag.s  vert.s
src/: CMakeLists.txt  fileutils.c  main.c
src/core/: CMakeLists.txt  doccmd.c  document.c  input.c  line.c  strbuf.c
src/document/: doccmd.c  document.c  line.c
src/ds/: strbuf.c
src/font/: font.c
src/gui/: CMakeLists.txt  font.c  glad.c  window.c
src/gui/gl/: shader.c
src/input/: input.c  keyboard.c
src/rendering/: line_renderer.c  renderer.c
